--- a/src/pages/bob-wills.mdx
+++ b/src/pages/bob-wills.mdx
@@ -5,7 +5,8 @@ title: Bob Wills
 
 # Bob Wills
 ***
-James Robert "Jim Rob" (Bob) Wills (March 6, 1905 - May 13, 1975) was born the first of 10 children to Emma Lee Foley and John Tompkins Wills in the small central Texas farming community of Kosse. His father was a fiddle player who along with his grandfather, taught the young Wills to play the fiddle and the mandolin. The family soon moved to Hall County in the West Texas Panhandle in 1913, where young Bob began picking cotton "down between the rivers" (Little Red River and Prairie Dog Town Fork), halfway between Lakeview and Turkey, Texas. He enjoyed listening to the black cotton pickers singing the blues as they moved up and down the cotton rows. Wills once told Charles Townsend, author of San Antonio Rose: The Life and Times of Bob Wills, "They sang blues you never heard before".
+
+<img src="/images/legends/BobWills_Legends.png" alt="Bob Wills" style="float: left; padding-right: 10px; width: 150px;" />James Robert "Jim Rob" (Bob) Wills (March 6, 1905 - May 13, 1975) was born the first of 10 children to Emma Lee Foley and John Tompkins Wills in the small central Texas farming community of Kosse. His father was a fiddle player who along with his grandfather, taught the young Wills to play the fiddle and the mandolin. The family soon moved to Hall County in the West Texas Panhandle in 1913, where young Bob began picking cotton "down between the rivers" (Little Red River and Prairie Dog Town Fork), halfway between Lakeview and Turkey, Texas. He enjoyed listening to the black cotton pickers singing the blues as they moved up and down the cotton rows. Wills once told Charles Townsend, author of San Antonio Rose: The Life and Times of Bob Wills, "They sang blues you never heard before".
 
 At the young age of 10 Wills played his very first ranch dance. He played for countless West Texas house parties and ranch dances over the next 14 years, where his life and career were greatly influenced by that frontier fiddle environment. He also importantly learned the blues and jazz from his black playmates and coworkers who sang and picked blues on their guitar. He learned to play fiddle and sing with the heat of blues and the swing of jazz; his fusion of music could as properly have been called Western Jazz as Western Swing.
 
