adding aws bucket

--- a/src/pages/bob-wills.mdx
+++ b/src/pages/bob-wills.mdx
@@ -4,15 +4,41 @@ title: Bob Wills
 ---
 
 # Bob Wills
-***
 
-<img src="/images/legends/BobWills_Legends.png" alt="Bob Wills" style="float: left; padding-right: 10px; width: 150px;" />James Robert "Jim Rob" (Bob) Wills (March 6, 1905 - May 13, 1975) was born the first of 10 children to Emma Lee Foley and John Tompkins Wills in the small central Texas farming community of Kosse. His father was a fiddle player who along with his grandfather, taught the young Wills to play the fiddle and the mandolin. The family soon moved to Hall County in the West Texas Panhandle in 1913, where young Bob began picking cotton "down between the rivers" (Little Red River and Prairie Dog Town Fork), halfway between Lakeview and Turkey, Texas. He enjoyed listening to the black cotton pickers singing the blues as they moved up and down the cotton rows. Wills once told Charles Townsend, author of San Antonio Rose: The Life and Times of Bob Wills, "They sang blues you never heard before".
+---
 
-At the young age of 10 Wills played his very first ranch dance. He played for countless West Texas house parties and ranch dances over the next 14 years, where his life and career were greatly influenced by that frontier fiddle environment. He also importantly learned the blues and jazz from his black playmates and coworkers who sang and picked blues on their guitar. He learned to play fiddle and sing with the heat of blues and the swing of jazz; his fusion of music could as properly have been called Western Jazz as Western Swing.
+<img
+  src="https://cbws.s3.us-east-2.amazonaws.com/images/legends/BobWills_Legends.png"
+  alt="Bob Wills"
+  style="float: left; padding-right: 10px; width: 150px;"
+/>James Robert "Jim Rob" (Bob) Wills (March 6, 1905 - May 13, 1975) was born the first
+of 10 children to Emma Lee Foley and John Tompkins Wills in the small central Texas
+farming community of Kosse. His father was a fiddle player who along with his grandfather,
+taught the young Wills to play the fiddle and the mandolin. The family soon moved
+to Hall County in the West Texas Panhandle in 1913, where young Bob began picking
+cotton "down between the rivers" (Little Red River and Prairie Dog Town Fork), halfway
+between Lakeview and Turkey, Texas. He enjoyed listening to the black cotton pickers
+singing the blues as they moved up and down the cotton rows. Wills once told Charles
+Townsend, author of San Antonio Rose: The Life and Times of Bob Wills, "They sang
+blues you never heard before".
 
-After several years of drifting, "Jim Rob", then in his 20s, attended barber school, got married, and moved first to Roy, New Mexico then back to Turkey, Texas to be a barber. He alternated barbering and fiddling even after he settled in Fort Worth, Texas in 1929 to pursue a career in music. It was there that while performing blackface in a medicine show, he learned comic timing and some of the famous "patter" he later delivered on his records. The minstrel show's owner gave him the nickname "Bob".
+At the young age of 10 Wills played his very first ranch dance. He played for countless West
+Texas house parties and ranch dances over the next 14 years, where his life and career were
+greatly influenced by that frontier fiddle environment. He also importantly learned the blues
+and jazz from his black playmates and coworkers who sang and picked blues on their guitar. He
+learned to play fiddle and sing with the heat of blues and the swing of jazz; his fusion of music
+could as properly have been called Western Jazz as Western Swing.
 
-The irony that Wills made his professional debut in blackface is not lost on Wills' daughter, Rosetta. "He had a lot of respect for the musicians and music of his black friends", Rosetta is quoted as saying on the Bob Wills and the Texas Playboys Web site. She remembers that her father was such a fan of Bessie Smith, "he once rode 50 miles on horseback just to see her perform live".
+After several years of drifting, "Jim Rob", then in his 20s, attended barber school, got married,
+and moved first to Roy, New Mexico then back to Turkey, Texas to be a barber. He alternated barbering
+and fiddling even after he settled in Fort Worth, Texas in 1929 to pursue a career in music. It was
+there that while performing blackface in a medicine show, he learned comic timing and some of the famous
+"patter" he later delivered on his records. The minstrel show's owner gave him the nickname "Bob".
+
+The irony that Wills made his professional debut in blackface is not lost on Wills' daughter, Rosetta.
+"He had a lot of respect for the musicians and music of his black friends", Rosetta is quoted as saying
+on the Bob Wills and the Texas Playboys Web site. She remembers that her father was such a fan of Bessie
+Smith, "he once rode 50 miles on horseback just to see her perform live".
 
 ## EARLY WESTERN SWING
 
@@ -54,7 +80,7 @@ In 1969 the Governor and Legislature of Texas honored Wills for his contribution
 
 By 1971, Wills recovered sufficiently to travel occasionally and appear in a wheelchair at tribute concerts. In 1973 he participated in a final recording session with members of the original Texas Playboys from the 1930s to the 1960s. Merle Haggard was invited to play on this historic reunion album. The session, scheduled for two days, took place in December of 1973, with the album titled: "Bob Wills & His Texas Playboys For the Last Time". Wills appeared on some of the tracks from the first day's session but suffered another stroke overnight. He had a more severe one a few days later. His beloved musicians completed the album without him. Wills by then was comatose. He lingered until his death in Fort Worth on May 13, 1975.
 
-## LEGACY 
+## LEGACY
 
 Wills' musical legacy has endured, bridging the gap from the race music of the 1930s and 40s to be-bop, rockabilly and rock & roll. His style of music and innovation influenced performers as vast as Hank Williams, Chuck Berry and Jimmy Hendrix. He heavily influenced Buck Owens and Merle Haggard and helped to spawn a style of music now known as the Bakersfield Sound (Bakersfield, California was one of Wills' regular stops in his heyday). A 1970 Bob Wills tribute album by Haggard directed a wider audience to Wills' music, as did the appearance of younger "revival" bands like Asleep At The Wheel and the growing popularity of longtime Wills disciple and fan Willie Nelson. Before his own death, Waylon Jennings recorded a hit song that payed tribute to his hero: "Bob Wills is Still the King". Today, George Strait performs Bob Wills music live on tours and also records songs greatly reflecting the magic of Bob Wills and his Texas style Western Swing.
 
